[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/YellowTexture.jpg" type="Texture" id=1]
[ext_resource path="res://src/DarkBlueTexture.jpg" type="Texture" id=2]
[ext_resource path="res://src/objects/RepairPlate.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 13, 11 )

[node name="RepairPlate" type="Area2D"]
collision_layer = 0
script = ExtResource( 3 )

[node name="YellowTexture" type="Sprite" parent="."]
position = Vector2( 0, -5.96046e-08 )
scale = Vector2( 0.0390625, 0.0415039 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, 0 )
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]

[node name="TextureProgress" type="TextureProgress" parent="."]
margin_left = 14.0
margin_top = -7.0
margin_right = 270.0
margin_bottom = 249.0
rect_scale = Vector2( 0.01, 0.05 )
max_value = 5.0
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 1 )
fill_mode = 3

[connection signal="body_entered" from="." to="." method="_on_RepairPlate_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_RepairPlate_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
